# cli-file

./: CHANGELOG.md  Project.md  README.md  TODO.md  cli-file.cabal  commands.cli  lexer.cabal  test.cli
.github/workflows/: haskell.yml
app/: Command.hs  Executor.hs  Lexer.hs  Main.hs  Params.hs  Parser.hs  Symbol.hs
app/json/: Main.hs
src/: Command.hs  Helpers.hs  Lib.hs  Params.hs  Parser.hs  ParserError.hs  Symbol.hs
test/: Spec.hs
