cabal-version:      2.4
name:               cli-file
version:            0.1.0.0

author:             Soanvig
maintainer:         soanvig@gmail.com

extra-source-files: CHANGELOG.md

library
    hs-source-dirs:      src
    exposed-modules:     Lib

    other-modules:
        Parser
        ParserError
        Symbol
        Executor
        Params
        Command

    build-depends:    base ^>=4.14.1.0
                     , relude ^>= 1.0.0.0
                     , parsec
                     , process
    mixins:           base hiding (Prelude)
                    , relude (Relude as Prelude)
                    , relude

  default-language:    Haskell2010

executable cli-file-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.14.1.0
                     , relude ^>= 1.0.0.0
                     , cli-file
    mixins:           base hiding (Prelude)
                    , relude (Relude as Prelude)
                    , relude
    default-language: Haskell2010

Test-Suite cli-file-test
  Type:                     exitcode-stdio-1.0
  Main-is:                  test/Spec.hs
  Build-depends:            base, hspec, cli-file
