cabal-version:      2.4
name:               lexer
version:            0.1.0.0

author:             Soanvig
maintainer:         soanvig@gmail.com

extra-source-files: CHANGELOG.md

executable lexer
    main-is:          Main.hs

    other-modules:
        Parser
        Symbol
        Executor

    build-depends:    base ^>=4.14.1.0
                     , relude ^>= 1.0.0.0
                     , parsec
                     , process
    mixins:           base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude
    hs-source-dirs:   app
    default-language: Haskell2010
